done with the exercise

--- a/start.html
+++ b/start.html
@@ -9,5 +9,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Lesson</title>
   </head>
-  <body></body>
+  <body>
+    <input type="button" id="button" name="button">
+    <label for="button">this is a button</label><br>
+
+    <label for="points">Points (between 0 and 100):</label>
+    <input type="range" id="points" name="points" min="0" max="100"><br>
+
+    <input type="checkbox" checked>
+    <label>this is the checbox</label><br>
+    
+    <input type="date">
+
+  </body>
 </html>
